12-lab-associate-elastic-ip-to-ec2-instance/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "Nadir IGW"
  }
}
