12-lab-associate-elastic-ip-to-ec2-instance/vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "Nadir VPC"
  }
}
